src/General/css/layout.css
/* ... */
/* Board Title */
#boardTitle {
  font-size: #{parseInt(_conf["Font Size"], 10) + 10}px;
  text-align: center;
  z-index: 4;
#{{
"at sidebar top": "
  position: fixed;
  #{Style.sidebarLocation[0]}: 2px;
  top: #{(if Style.logoOffset is 0 and _conf["Icon Orientation"] isnt "vertical" then 40 else 21) + Style.logoOffset}px;
  width: #{width}px;
"

"at sidebar bottom": "
  position: fixed;
  #{Style.sidebarLocation[0]}: 2px;
  bottom: 280px;
  width: #{width}px;
"

"under post form": "
  position: fixed;
  #{Style.sidebarLocation[0]}: 2px;
  bottom: 140px;
  width: #{width}px;
"

"at top": "
  margin: 12px 0;
"

"hide": "
  display: none;
"}[_conf["Board Title"]]}
}
.boardTitle a {
  font-size: #{parseInt(_conf["Font Size"], 10) + 10}px;
}
.boardSubtitle,
.boardSubtitle a {
  font-size: #{parseInt(_conf["Font Size"], 10) - 1}px;
}
/* Dialogs */
.move {
  cursor: pointer;
}
#ihover {
  position: fixed;
  max-height: 97%;
  max-width: 75%;
  padding: 10px;
  z-index: 22;
}
#qp {
  position: fixed;
  z-index: 22;
}
#qp .postMessage::after {
  clear: both;
  display: block;
  content: "";
}
#qp .full-image {
  max-height: 300px;
  max-width: 500px;
}
#menu {
  position: fixed;
  outline: none;
  z-index: 22;
}
/* Image Expansion */
.fit-width .full-image {
  max-width: 100%;
  width: 100%;
}
#{if _conf['Images Overlap Post Form'] then "
.full-image {
  position: relative;
  z-index: 22;
}" else ""
}
/* Delete Buttons */
#{if _conf['Hide Delete UI'] then "
.deleteform,
.post:not(#exlinks-options) .rice {
  display: none;
}
.postInfo {
  padding: 0 0 0 3px;
}
" else "
.deleteform {
  position: fixed;
  z-index: 18;
  width: 0;
  bottom: 0;
  right: 0;
  border-width: 1px 0 0 1px;
  border-style: solid;
  font-size: 0;
  color: transparent;
}
.deleteform:hover {
  width: auto;
}
.deleteform::before {
  z-index: 18;
  border-width: 1px 0 0 1px;
  border-style: solid;
  content: 'X';
  display: block;
  position: fixed;
  bottom: 0;
  right: 0;
  font-size: #{_conf['Font Size']}px;
  #{Style.sizing}: border-box;
  height: 1.6em;
  width: 1.4em;
  text-align: center;
}
.deleteform:hover::before {
  display: none;
}
.deleteform input {
  margin: 0 1px 0 0;
}"}
/* Slideout Navigation */
#boardNavDesktopFoot {
  position: fixed;
  width: #{width}px;
  #{Style.sidebarLocation[0]}: 2px;
  text-align: center;
  font-size: 0;
  color: transparent;
  overflow: hidden;
  #{Style.sizing}: border-box;
}
#boardNavDesktopFoot a,
#boardNavDesktopFoot a::after,
#boardNavDesktopFoot a::before {
  font-size: #{_conf['Font Size']}px;
}
#boardNavDesktopFoot:hover {
  overflow-y: auto;
  padding: 2px;
}
#boardNavDesktopFoot:not(:hover) {
  border-color: transparent;
  background-color: transparent;
  height: 0;
  overflow: hidden;
  padding: 0;
  border: 0 none;
}
#{{
compact: "
#boardNavDesktopFoot {
  word-spacing: 1px;
}
"
list: "
#boardNavDesktopFoot a {
  display: block;
}
#boardNavDesktopFoot:hover {
  max-height: 400px;
}
#boardNavDesktopFoot a::after {
  content: ' - ' attr(title);
}
#boardNavDesktopFoot a[href*='//boards.4chan.org/']::after,
#boardNavDesktopFoot a[href*='//rs.4chan.org/']::after {
  content: '/ - ' attr(title);
}
#boardNavDesktopFoot a[href*='//boards.4chan.org/']::before,
#boardNavDesktopFoot a[href*='//rs.4chan.org/']::before {
  content: '/';
}
"
hide: "
#boardNavDesktopFoot {
  display: none;
}"}[_conf["Slideout Navigation"]]}
/* Watcher */
#watcher {
  position: fixed;
  z-index: 14;
  padding: 2px;
  #{if _conf["Rounded Edges"] then "border-radius: 3px;" else ""}
}
#watcher > div {
  max-height: 1.3em;
  overflow: hidden;
} 
#{if _conf['Slideout Watcher'] then "
#watcher {
  width: #{width}px;
  #{Style.sidebarLocation[0]}: 2px !important;
  #{Style.sidebarLocation[1]}: auto !important;
  #{Style.sizing}: border-box;
}
#watcher .move {
  cursor: default;
  text-decoration: #{if _conf["Underline Links"] then "underline" else "none"};
}
#watcher > div {
  overflow: hidden;
}
#watcher:hover {
  overflow-y: auto;
}
#watcher:not(:hover) {
  height: 0;
  overflow: hidden;
  border: 0 none;
  padding: 0;
}" else "
#watcher {
  width: 200px;
}
#watcher:not(:hover) {
  max-height: 200px;
  overflow: hidden;
} 
"}
/* Announcements */
#globalMessage {
  text-align: center;
  #{if _conf["Rounded Edges"] then "border-radius: 3px;" else ""}
}
#{{
'slideout': " 
#globalMessage {
  position: fixed;
  padding: 2px;
  width: #{width}px;
  #{Style.sidebarLocation[0]}: 2px !important;
  #{Style.sidebarLocation[1]}: auto !important;
}
#globalMessage h3 {
  margin: 0;
}
#globalMessage:hover {
  #{Style.sizing}: border-box;
  overflow-y: auto;
}
#globalMessage:not(:hover) {
  height: 0;
  overflow: hidden;
  padding: 0;
  border: 0 none;
}"
'hide': "
#globalMessage {
  display: none !important;
}
"}[_conf['Announcements']] or ""}
/* Threads */
.thread {
  margin: #{parseInt _conf["Top Thread Padding"], 10}px 0 #{parseInt _conf["Bottom Thread Padding"], 10}px 0;
  #{if _conf["Rounded Edges"] then "border-radius: 4px;" else ""}
}
/* Thread Clearfix */
.thread > div:last-of-type::after {
  display: block;
  content: ' ';
  clear: both;
}
/* Posts */
.expanding {
  opacity: .5;
}
.fileText:hover .fntrunc,
.fileText:not(:hover) .fnfull,
.expanded-image > .post > .file > .fileThumb > img[data-md5],
.post > .file > .fileThumb > .full-image {
  display: none;
}
.expanded-image > .post > .file > .fileThumb > .full-image {
  display: block;
}
.post,
.summary,
.threadContainer {
  margin-bottom: #{Style.replyMargin}px;
}
.replyContainer:last-of-type .post {
  margin-bottom: 0;
}
.menu-button {
  position: relative;
}
.stub .menu-button,
.post .menu-button,
.hide-thread-button,
.show-thread-button span,
.hide-reply-button,
.show-reply-button span {
  float: right;
}
.post .menu-button,
.hide-thread-button,
.hide-reply-button {
  margin: 0 3px;
  opacity: 0;
  #{agent}transition: opacity .3s ease-out 0s;
}
/* ... */

